--- a/dd-homework1/Base.lproj/Main.storyboard
+++ b/dd-homework1/Base.lproj/Main.storyboard
@@ -101,7 +101,7 @@
                                 <color key="backgroundColor" red="0.94901960780000005" green="0.49803921569999998" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
                                 <accessibility key="accessibilityConfiguration" identifier="-"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="--">
+                                <state key="normal" title="-">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
